chore: java 24 update